Bug 78654 - FILESAVE: DOCX : LO exported corrupt docx file containing hyperlink+field.
Summary: FILESAVE: DOCX : LO exported corrupt docx file containing hyperlink+field.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: Other Windows (All)
: medium normal
Assignee: Sushil Shinde
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-13 11:05 UTC by Sushil Shinde
Modified: 2014-05-22 12:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Attached file contains on hyperlink with field PAGEREF inside it. (39.97 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-13 11:05 UTC, Sushil Shinde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sushil Shinde 2014-05-13 11:05:37 UTC
Created attachment 98971 [details]
Attached file contains on hyperlink with field PAGEREF inside it.

Problem description: 
If File contains PAGEREF field inside hyper-link, LO exports corrupt document.

Steps to reproduce:
1. Open attached document on latest LO master.
2. Save opened file as .docx file.
3. Open saved file on MS Office

Current behaviour:
MS Office shows file corruption dialogue box if tried to open saved file.

Expected behaviour:
MS Office should open saved file properly without any corruption.
              
Operating System: Windows 7
Version: 4.3.0.0.alpha1
Comment 1 Commit Notification 2014-05-20 08:17:21 UTC
sushil_shinde committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d2a19aad658cc0e8939c16b5137c15727c3cdff9

fdo#78654 LO was exporting corrupt docx file.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 retired 2014-05-21 14:33:27 UTC
FIXED
Comment 3 retired 2014-05-21 14:34:48 UTC
and verified.

I do not get any error message after saving the test file to a new docx file and then opening the saved file with Word 2011 on OSX 10.9.3 with LO
Version: 4.3.0.0.alpha1+
Build ID: 61b2ae31c6642e09b3052599ae22077e8d41eabd
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-05-20_23:56:34
Comment 4 retired 2014-05-22 12:35:22 UTC
If anybody does have windows MS Office, please test there too. I was able to save to docx under win 8.1, but since I do not have MS Office for windows I cannot test to see if that still throws any errors.
Comment 5 Jorendc 2014-05-22 12:37:41 UTC
(In reply to comment #4)
> If anybody does have windows MS Office, please test there too. I was able to
> save to docx under win 8.1, but since I do not have MS Office for windows I
> cannot test to see if that still throws any errors.

Tested using Windows 8.1 and opened RT file using Word 2013 -> No errors anymore. So I also can verify :-).

Kind regards,
Joren