fdo#78654 LO was exporting corrupt docx file.

If docx file contains multiple hyperlinks in one paragraph
   and one of the hyperlink contains "PAGEREF" field. End tag
   for "PAGEREF" field was not exported hence it was causing
   corruption in exported file.
   Fixed export part of field end tags in case of "PAGEREF".
   Added unit test.

Change-Id: I18a3625213bf7269e3f441859a27acc38cf6ff45
Reviewed-on: https://gerrit.libreoffice.org/9364
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>